--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -61,8 +61,8 @@ post:
   relate_posts: Further Reading
   share: Share
   button:
-    next: Next
-    previous: Previous
+    next: Newer
+    previous: Older
     copy_code:
       succeed: Copied!
     share_link:
